🏗️🍰 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Unit 1 HTML Basics</title>
+  <title>Slow Down</title>
 </head>
 <body>
+  
+<h1> Slow Down </h1>
+  
+<h2> Poem </h2>
+  
+<p1> Is it strange to long <br>
+  for slow days <br>
+  filled with quiet moments<br>
+  of joy. <br>
+  The world seems to be <br>
+  in a rush, <br>
+  but I choose <br>
+  to remain still. </p1>
 
 
   
