🟡📯 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
 <h2> Poem </h2>
   
 <p1> Is it strange to long <br>
-  for slow days <br>
-  filled with quiet moments<br>
-  of joy. <br>
+  for <em>slow</em> days <br>
+  filled with <em>quiet </em> moments<br>
+  of <em>joy </em>. <br>
+  <br>
   The world seems to be <br>
   in a rush, <br>
-  but I choose <br>
-  to remain still. </p1>
+  <strong> but I choose </strong> <br>
+  <strong> to remain still. </strong> </p1>
 
 
   
